add fixed json and src

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "english",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://catitgirl.github.io/languagecards/",
+  "homepage": "https://catitgirl.github.io/eng_for_kids/",
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@testing-library/jest-dom": "^5.16.5",
